# terraform-workspace-switcher

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: main.rs
